# rocket-template

./: LICENSE  README.md  default.env
template/: .env  Cargo.toml  Rocket.toml
