[package]
name = "{{PackageName}}"
version = "1.0.0"
authors = ["{{Author}}"]

[[bin]]
name = "{{BinaryName}}"
path = "src/bin/main.rs"

[lib]
name = "mlib"
path = "src/lib.rs"

[dependencies]
# Rocket Server Deps
rocket = "0.2"
rocket_codegen = "0.2"
rocket_contrib = "0.2"

# JSON Deps
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

# DB Deps
diesel = { version = "~0.9.0", features = ["postgres"] }
diesel_codegen = { version = "~0.9.0", features = ["postgres"] }
dotenv = "~0.8.0"
r2d2 = "~0.7.1"
r2d2-diesel = "~0.9.0"
lazy_static = "~0.1.0"
